melhorias e bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,12 @@
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
 	</head>
 
-	<body ng-controller="mainController">
+	<body ng-controller="mainController" ng-init="novaTarefaEscondida=true">
+		
 		<nav class="light-blue lighten-1" role="navigation" style="background-color: #CCCCCC !important;">
 			<div class="nav-wrapper container">
-				<a id="logo-container" href="#" class="brand-logo" style="font-size:18px">tcapp</a>
-				<ul class="right hide-on-med-and-down">
+				<a id="logo-container" href="#" class="brand-logo" style="font-size:18px" ng-click="home()">tcapp</a>
+		<!--		<ul class="right hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#" ng-click="novaTarefa()">Nova tarefa</a></li>
 				</ul>
@@ -31,11 +32,19 @@
 			    </ul>
 				<a href="#" data-activates="nav-mobile" class="button-collapse">
 					<i class="material-icons">menu</i>
-				</a>
+				</a>-->
 			</div>
 		</nav>
+		
+		<div class="fixed-action-btn" style="bottom: 24px; right: 24px;" ng-show="novaTarefaEscondida">
+			<a class="btn-floating btn-large waves-effect waves-light blue" ng-click="novaTarefa()" ><i class="material-icons">add</i></a>
+		</div>
+		
+		<div class="fixed-action-btn" style="bottom: 24px; left: 24px;" ng-show="!novaTarefaEscondida">
+			<a class="btn-floating btn-large waves-effect waves-light red" ng-click="novaTarefa()" ><i class="material-icons">undo</i></a>
+		</div>
 
-		<div id="tarefasDeHoje" class="container" ng-show="!novaTarefaEscondida">
+		<div id="tarefasDeHoje" class="container" ng-show="novaTarefaEscondida">
 			<div class="section">
 				<div class="row">
 					<div class="col s4 center">
@@ -63,7 +72,7 @@
 			</div>
 		</div>
 
-		<div id="novatarefa" class="container" ng-show="novaTarefaEscondida">
+		<div id="novatarefa" class="container" ng-show="!novaTarefaEscondida">
 			<div class="section">
 				<div class="row">
 					<div class="col s12">
@@ -71,7 +80,7 @@
 						<h5>Nova TC</h5>
 
 						<h6>Titulo</h6>
-						<select class="browser-default"  ng-model="configuracao.titulo">
+						<select class="browser-default" ng-model="configuracao.titulo">
 							<option value="titulo">--Escolha o título--</option>
 							<option ng-repeat="tit in titulos" value="{{tit.tituloId}}">{{tit.descricao}}</option>
 						</select>
@@ -83,7 +92,7 @@
 						</select>
 
 						<h6>Começa</h6>
-						<div style="display:flex;flex-direction:row;flex-wrap:nowrap;justify-content:space-between;">
+						<!--<div style="display:flex;flex-direction:row;flex-wrap:nowrap;justify-content:space-between;">
 							<a href="#" style="padding:7px;text-align:center;background-color:#CCCCCC;width:31%;height:150px;border: 2px gray;background-image: url('./images/hojex.png');">
 								<span style="margin:auto;">Hoje</span>
 							</a>
@@ -96,22 +105,24 @@
 								<span style="margin-top:30px;">Depois de amanhã</span>
 							</a>
 						</div>
-						<!-- <select class="browser-default" ng-model="configuracao.inicio">
+						-->
+						<select class="browser-default" ng-model="configuracao.inicio">
 							<option value="titulo">--Escolha quando começa--</option>
 							<option ng-repeat="com in comecos" value="{{com.id}}">{{com.descricao}}</option>
-						</select> -->
+						</select>
 						
-						<a class="waves-effect waves-light btn" style="clear:both;" ng-click="gravarNovaConfiguracao(configuracao)">nova tarefa</a>
+						<a class="waves-effect waves-light btn blue" style="clear:both;" ng-click="gravarNovaConfiguracao(configuracao)">nova tarefa</a>
 					</div>
 				</div>
 			</div>
 		</div>
 
 	
-		<footer class="orange" style="background-color: #CCCCCC !important; position:absolute; bottom:0; width:100%; height:60px; background:#6cf;">
-		    <h5 class="white-text">® TCAPP 2016</h5>
-		</footer>
-
+		<!--
+			<footer class="orange" style="background-color: #CCCCCC !important; position:absolute; bottom:0; width:100%; height:60px; background:#6cf;">
+			    <h5 class="white-text">® TCAPP 2016</h5>
+			</footer>
+		-->
 		<!-- Scripts-->
 		<script src="js/jquery-2.0.3.min.js"></script>
 		<script src="js/old_angular-1.0.8/angular-1.0.8/angular.min.js"></script>
