recarregar tarefas depois de inserir nova tarefa

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 							<div class="card-content" id="{{tarefa.configuracaoId}}">
 								<h5>{{tarefa.descricao}}</h5>
 								<h6>{{tarefa.recorrencia}}</h6>
-								<h6>{{tarefa.configuracaoId}}</h6>
+								<!-- <h6>{{tarefa.configuracaoId}}</h6> -->
 							</div>
 						</div>
 					</div>
