--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="Content-Language" content="pt-br">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<base href="/">
 		
 		<title>tcapp</title>
 		<link rel="shortcut icon" href="images/favicon.png">
