--- a/public/nova_tarefa.html
+++ b/public/nova_tarefa.html
@@ -1,5 +1,5 @@
 <div class="fixed-action-btn" style="bottom: 24px; left: 24px;" >
-	<a href="#/" class="btn-floating btn-large waves-effect waves-light red" ng-click="novaTarefa()" ><i class="material-icons">undo</i></a>
+	<a href="/" class="btn-floating btn-large waves-effect waves-light red" ng-click="novaTarefa()" ><i class="material-icons">undo</i></a>
 </div>
 
 <div id="novatarefa" class="container">
