--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
 
 	<body ng-controller="mainController" >
 
+		<input type="button" value="mostra guid" ng-click="mostraGuid()" />
+		<p>{{guid}}</p>
+		<script type="text/javascript">
+	        var guid = Android.getGuid();
+
+		</script>
+
 		<div ng-view></div>		
 
 		<!-- Scripts-->
@@ -29,9 +36,10 @@
         <script src="bower_components/materialize/dist/js/materialize.js" type="text/javascript" ></script>
 		<script src="js/init.js"></script>
 		<script src="core.js"></script>
-		
+
+<!--
 		<div class="hiddendiv common"></div>
 		<div class="drag-target" style="touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); left: 0px;">
-		</div>
+		</div>-->
 	</body>
 </html>
